<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Guitar Training</string>
    <string name="default_notification_channel_id">Channel</string>
    <string name="toolbar_forgot_password">Mot de passe oublié ?</string>
    <string name="toolbar_title_game_list">Jeux</string>
    <string name="toolbar_title_end_program">Fin du programme</string>
    <string name="toolbar_title_song_details">Ma chanson</string>
    <string name="toolbar_title_song_creation">Création d\'une chanson</string>
    <string name="toolbar_title_song_update">Modification de la chanson</string>
    <string name="toolbar_title_program_details">Mon programme</string>
    <string name="toolbar_title_program_update">Modification du programme</string>
    <string name="toolbar_title_program_creation">Création d\'un programme</string>
    <string name="toolbar_title_scale_game_list">Gammes</string>
    <string name="toolbar_title_interval_game_list">Intervalles</string>
    <string name="toolbar_title_reversed_interval_game_list">Renversement d\'intervalle</string>
    <string name="dialog_suppress_account_title">Suppression d\'un compte</string>
    <string name="dialog_suppress_account_confirm_content">Es-tu sûr de vouloir supprimer le compte ?</string>
    <string name="dialog_logout_title">Déconnexion</string>
    <string name="dialog_logout_confirm_content">Êtes-vous sûr de vouloir vous déconnecter ?</string>
    <string name="dialog_create_program_title">Création d\'un programme</string>
    <string name="dialog_create_program_content">Es-tu sûr de vouloir créer ce programme ?</string>
    <string name="dialog_update_program_title">Mise à jour du programme</string>
    <string name="dialog_update_program_confirm_content">Es-tu certain de vouloir mettre à jour le programme ?
    </string>
    <string name="dialog_remove_program_title">Supression du programme</string>
    <string name="dialog_remove_program_confirm_content">Es-tu certain de vouloir supprimer le programme ?</string>
    <string name="dialog_details_song_score_title">Tu as fini ? Note ta performance !</string>
    <string name="dialog_creation_song_title">Création de la chanson</string>
    <string name="dialog_creation_song_content">Es-tu sûr de vouloir créer cette chanson ?</string>
    <string name="dialog_update_song_title">Mise à jour de la chanson</string>
    <string name="dialog_update_song_confirm_content">Es-tu certain de vouloir metttre à jour la chanson ?</string>
    <string name="dialog_remove_song_title">Suppression de la chanson</string>
    <string name="dialog_remove_song_confirm_content">Es-tu certain de vouloir supprimer le programme ?</string>
    <string name="dialog_view_help_scale_title">Gamme %s</string>
    <string name="dialog_game_answer_title">Votre réponse :</string>
    <string name="generic_button_no">Non</string>
    <string name="generic_button_yes">Oui</string>
    <string name="generic_button_validate">Valider</string>
    <string name="generic_button_delete">Effacer</string>
    <string name="nav_login_home">Login Home</string>
    <string name="nav_user_program_home">User Program Home</string>
    <string name="nav_user_song_home">User Song Home</string>
    <string name="timer_pause_button">Pause</string>
    <string name="timer_title">C\'est parti !</string>
    <string name="timer_start_button">Démarrer</string>
    <string name="const_na">NA</string>
    <string name="never">Jamais</string>
    <string name="login_create_account">Créer un compte</string>
    <string name="login_home_hint_password">Mot de passe</string>
    <string name="login_home_hint_username">Nom d\'utilisateur</string>
    <string name="login_forgot_password">Mot de passe oublié ?</string>
    <string name="login_game_access">Accéder aux jeux hors connexion</string>
    <string name="login_home_title">Renseigne tes informations de connexion</string>
    <string name="create_account_email_hint">Email</string>
    <string name="create_account_pseudo_hint">Pseudo</string>
    <string name="create_account_password_hint">Mot de passe</string>
    <string name="create_account_title">Création d\'un compte</string>
    <string name="forgot_password_email_hint">Adresse email</string>
    <string name="forgot_password_explanation">Saisie ton adresse e-mail. Le mot de passe te sera réenvoyé</string>
    <string name="user_panel_navigation_drawer_games">Jeux</string>
    <string name="user_panel_navigation_drawer_songs">Mes chansons</string>
    <string name="user_panel_navigation_drawer_settings">Paramètres</string>
    <string name="user_panel_navigation_drawer_logout">Se déconnecter</string>
    <string name="user_panel_navigation_drawer_programs">Mes programmes</string>
    <string name="user_panel_navigation_drawer_legal_notices">Mentions légales</string>
    <string name="program_name">Nom du programme</string>
    <string name="program_description">Description du programme</string>
    <string name="user_programs_list_no_program_text">Aucun programme disponible</string>
    <string name="user_programs_list_nb_exercises_text">Nombre d\'exercises : %s</string>
    <string name="fragment_user_programs_list_total_duration_exercises_minutes_text">Durée totale du programme: %s
        minutes
    </string>
    <string name="fragment_user_programs_list_total_duration_exercises_hours_text">Durée totale du programme: %1$s
        heure(s) et %2$s minutes
    </string>
    <string name="user_program_details_start">Démarrer le programme</string>
    <string name="user_program_details_update">Modifier le programme</string>
    <string name="user_program_details_remove">Supprimer le programme</string>
    <string name="user_details_program_no_description">Pas de description</string>
    <string name="user_details_duration_exercise_minutes_txt">%1$s minutes</string>
    <string name="user_details_duration_exercise_hours_txt">%1$s heures %2$s minutes</string>
    <string name="user_program_creation_title">Création d\'un programme</string>
    <string name="user_program_creation_add_exercise_text">Ajouter un exercise</string>
    <string name="user_program_creation_type_exercise_text">Type de l\'exercise</string>
    <string name="user_program_creation_button_validate_text">Créer le programme</string>
    <string name="user_program_creation_duration_exercise_hint">Durée de l\'exercise</string>
    <string name="user_program_update_program_exercises">Exercices</string>
    <string name="song_name">Nom de la chanson</string>
    <string name="song_description">Nom de l\'artiste</string>
    <string name="user_song_list_score">Note : %1$s/5</string>
    <string name="user_song_list_nb_play" tools:ignore="PluralsCandidate">Jouée : %1$d fois</string>
    <string name="user_song_list_last_play">Jouée la dernière fois : %1$s</string>
    <string name="user_song_list_no_program_text">Aucune chanson disponible</string>
    <string name="label_chart">Notes</string>
    <string name="user_song_details_start">Noter la répétition</string>
    <string name="user_song_details_update">Modifier la chanson</string>
    <string name="user_song_details_remove">Supprimer le chanson</string>
    <string name="chart_marker_content">%1$s / 5 le %2$s</string>
    <string name="song_title">Titre de la chanson</string>
    <string name="song_artist">Nom de l\'artiste</string>
    <string name="user_song_creation_title">Création d\'une chanson</string>
    <string name="user_song_creation_button_validate_text">Créer la chanson</string>
    <string name="user_settings_bass_mode">Mode basse</string>
    <string name="user_settings_guitar_mode">Mode guitare</string>
    <string name="user_settings_suppress_account">Supprimer mon compte</string>
    <string name="end_program_quit_button">Quitter</string>
    <string name="end_program_title">Fin du programme</string>
    <string name="end_program_description_text">Félicitations ! Tu es pavenu au bout du programme ! L\'entraînement
        est la clé, continue ! :)
    </string>
    <string name="confirm_next_exercise_title">Attention</string>
    <string name="confirm_next_exercise_content">Tu n\'as pas encore fini cet exercise. Veux-tu vraiment passer
        au suivant ?
    </string>
    <string name="generic_exercise_next_exercise_text">Exercice suivant</string>
    <string name="generic_exercise_start_button_text">Commencer l\'exercice</string>
    <string name="generic_exercise_choice_creation_program">Choix de l\'exercise</string>
    <string name="generic_exercise_duration_left_text"><![CDATA[<b>Temps restant :</b>]]> %1$s minutes.</string>
    <string name="generic_exercise_duration_text"><![CDATA[<b>Durée de l\'exercice :</b>]]> %1$s minutes.</string>
    <string name="exercise_scale_note_text">Note</string>
    <string name="exercise_scale_tone_text">Mode</string>
    <string name="exercise_scale_title_text">Pratique des gammes</string>
    <string name="exercise_scale_dialog_choice_mode_text">Choix du mode</string>
    <string name="exercise_scale_dialog_choice_note_text">Choix de la note</string>
    <string name="exercise_scale_description_text">
        <![CDATA[Entraine toi à improviser sur une gamme ! Choisi la gamme de ton choix ou sélectionne la aléatoirement à l\'aide des listes ci-dessous.]]></string>
    <string name="exercise_mode_mode_text">Mode</string>
    <string name="exercise_mode_title_text">Pratique des modes</string>
    <string name="exercise_mode_dialog_choice_mode_text">Choix du mode</string>
    <string name="exercise_mode_description_text">Entraîne toi à improviser avec un mode de ton choix ou choisi de
        manière aléatoire !
    </string>
    <string name="exercise_pull_off_hammer_on_title_text">Pull off / Hammer on</string>
    <string name="exercise_pull_off_hammer_on_description_text">Entraine toi aux hammer on et aux pull off !</string>
    <string name="exercise_bend_slide_title_text">Bend / Slide</string>
    <string name="exercise_bend_slide_description_text">Entraine toi aux slides et aux bends !</string>
    <string name="exercise_back_forth_title_text">Allers et retours</string>
    <string name="exercise_back_forth_description_text">Entraine toi à faire des allers et retours à la main droite !
    </string>
    <string name="exercise_palm_mute_title_text">Palm mute</string>
    <string name="exercise_palm_mute_description_text">Entraine toi aux palm-mutes !</string>
    <string name="exercise_skip_string_title_text">Muter une corde en accord</string>
    <string name="exercise_skip_string_description_text">Entraine toi à jouer des accords en sautant une corde !
    </string>
    <string name="exercise_tapping_title_text">Tapping</string>
    <string name="exercise_speed_description_text">Entraine toi à jouer vite !</string>
    <string name="exercise_sweep_picking_title_text">Sweep picking</string>
    <string name="exercise_sweep_picking_description_text">Entraine toi au sweep picking !</string>
    <string name="exercise_speed_title_text">Vitesse</string>
    <string name="exercise_tapping_description_text">Entraine toi au tapping !</string>
    <string name="exercise_slap_title_text">Slap</string>
    <string name="exercise_slap_description_text">Entraîne toi au slap !</string>
    <string name="exercise_three_fingers_title_text">Jeu avec trois doigts main droite</string>
    <string name="exercise_three_fingers_description_text">Joue avec l\'annulaire en plus à la main droite !</string>
    <string name="view_help_scale_reminder">Rappel</string>
    <string name="game_list_scale_game">Intervalles</string>
    <string name="game_right_answer">Bonne réponse !</string>
    <string name="interval_game_hint_answer">Réponse</string>
    <string name="game_wrong_answer">Mauvaise réponse …</string>
    <string name="scale_game_question">Gamme de %1$s %2$s :</string>
    <string name="game_list_interval_game">Notes de la gammes</string>
    <string name="game_list_reversed_interval_game">Renversement d\'intervalle</string>
</resources>