<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/menu_drawer_programs"
                android:checked="true"
                android:icon="@drawable/ic_program"
                android:title="@string/user_panel_navigation_drawer_programs"/>
        <item
                android:id="@+id/menu_drawer_songs"
                android:icon="@drawable/ic_song"
                android:title="@string/user_panel_navigation_drawer_songs"/>
        <item
                android:id="@+id/menu_drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/user_panel_navigation_drawer_settings"/>
        <item
                android:id="@+id/menu_drawer_legal_notices"
                android:icon="@drawable/ic_legal_notices"
                android:title="@string/user_panel_navigation_drawer_legal_notices"/>
        <item
                android:id="@+id/menu_drawer_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/user_panel_navigation_drawer_logout"/>
    </group>
</menu>