<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_user_programs_list">

    <fragment
            android:id="@+id/nav_user_programs_list"
            android:name="thomas.guitartrainingkotlin.presentation.fragment.program.UserProgramsListFragment"
            android:label="@string/user_panel_navigation_drawer_programs"
            tools:layout="@layout/fragment_user_programs_list" />

    <fragment
            android:id="@+id/nav_user_songs_list"
            android:name="thomas.guitartrainingkotlin.presentation.fragment.song.UserSongsListFragment"
            android:label="@string/user_panel_navigation_drawer_songs"
            tools:layout="@layout/fragment_user_songs_list" />

    <activity
            android:id="@+id/nav_games_list"
            android:name="thomas.guitartrainingkotlin.presentation.activity.GameActivity"
            android:label="@string/user_panel_navigation_drawer_games"
            tools:layout="@layout/activity_game" />

    <fragment
            android:id="@+id/nav_user_settings"
            android:name="thomas.guitartrainingkotlin.presentation.fragment.user.UserSettingsFragment"
            android:label="@string/user_panel_navigation_drawer_settings"
            tools:layout="@layout/fragment_user_settings" />

    <fragment
            android:id="@+id/nav_user_legal_notices"
            android:name="thomas.guitartrainingkotlin.presentation.fragment.other.LegalNoticesFragment"
            android:label="@string/user_panel_navigation_drawer_legal_notices"
            tools:layout="@layout/fragment_legal_notices" />

    <action android:id="@+id/nav_logout" />
</navigation>