<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_exercise_scale_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_small"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/exercise_scale_title_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_very_huge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_exercise_scale_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/exercise_scale_description_text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_scale_title" />


    <Button
        android:id="@+id/fragment_exercise_scale_button_choice_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_dropdown_black"
        android:text="@string/exercise_scale_note_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_exercise_scale_random_selection" />

    <ImageButton
        android:id="@+id/fragment_exercise_scale_random_selection"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_random_scale"
        app:layout_constraintEnd_toStartOf="@+id/fragment_exercise_scale_button_choice_mode"
        app:layout_constraintStart_toEndOf="@+id/fragment_exercise_scale_button_choice_note"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_scale_description" />

    <Button
        android:id="@+id/fragment_exercise_scale_button_choice_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_dropdown_black"
        android:text="@string/exercise_scale_tone_text"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_exercise_scale_random_selection" />


    <TextView
        android:id="@+id/fragment_exercise_scale_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_scale_random_selection"
        tools:text="@string/generic_exercise_duration_text" />

    <TextView
        android:id="@+id/fragment_exercise_scale_duration_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_exercise_scale_duration"
        tools:text="@string/generic_exercise_duration_left_text" />

    <Button
        android:id="@+id/fragment_exercise_scale_button_start_exercise"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_drawable"
        android:text="@string/generic_exercise_start_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/fragment_exercise_scale_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_exercise_scale_next_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_drawable"
        android:text="@string/generic_exercise_next_exercise_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>